# WEB_HW_11

./: main.py  pyproject.toml
migrations/: env.py
migrations/versions/: a4481b375ef1_create_contacts_table.py
src/: schemas.py
src/DB/: db.py  models.py
src/conf/: config.ini
src/routes/: contacts.py
utils/: CRUD.py  seed.py
