[tool.poetry]
name = "web-hw-11"
version = "0.1.0"
description = ""
authors = ["rattlingmars8 <rattlingmars8@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw_11"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
uvicorn = {extras = ["standart"], version = "^0.22.0"}
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"
asyncpgsa = "^0.27.1"
asyncpg = "^0.27.0"
psycopg2 = "^2.9.6"
faker = "^18.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
